--- a/views/templates/navbar.ejs
+++ b/views/templates/navbar.ejs
@@ -18,7 +18,7 @@
             <a class="nav-link active" aria-current="page" href="/">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/servicios">Servicios</a>
+            <a class="nav-link" href="/mascotas">Mascotas</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/serviciozds">nada</a>
