--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <%- include("templates/cabecera.ejs", {tituloWeb: "pagina principal"}) %> 
 
-    <h1 class="text-primary">Hola a EJS <%= titulo %></h1>
+    <h1 class="text-primary"><%= titulo %></h1>
 
 <%- include("templates/footer.ejs") %> 
