--- a/views/templates/navbar.ejs
+++ b/views/templates/navbar.ejs
@@ -21,7 +21,7 @@
             <a class="nav-link" href="/mascotas">Mascotas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/serviciozds">nada</a>
+            <a class="nav-link" href="/404">404</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
